# seqpy

./: setup.cfg
example/: example.ipynb
src/: __init__.py  pulses.py  sequence.py
src/seqpy/: __init__.py  pulses.py  sequence.py
src/seqpy/static/: __init__.py  math_util.py  pulses.py  sequence.py
src/seqpy/utils/: config.py  delay_calibration.py  iq_adjusting.py  pulse_reconstruction.py  randomized_benchmarking.py  seqc_generation.py  zhinst_awg_wrapper.py  zhinst_helpers.py
src/utils/: awg_wrapper.py  math_util.py  pulse_reconstruction.py  seqc_generation.py  zhinst_awg_wrapper.py
zhinst/: helpers.py  seqc_generation.py
zhinst/Zurich_Instruments_HDAWG_SeqPy/: Zurich_Instruments_HDAWG_Seqpy.ini  Zurich_Instruments_HDAWG_Seqpy.py  helpers.py
zhinst/Zurich_Instruments_UHFQA_SeqPy/: Zurich_Instruments_UHFQA.ini  Zurich_Instruments_UHFQA.py  Zurich_Instruments_UHFQA_SeqPy.ini  Zurich_Instruments_UHFQA_SeqPy.py
