[metadata]
name = SeqPy
version = 1.0
author = PAN Jiahe
author_email = jiahe.pan@epfl.ch
description = Conveniently setting up pulsing sequence for various microwave experiments


[options]
package_dir =
    = src
packages = find:
python_requirements = >= 3.6
install_requires = 
    setuptools>=40.1.0
    numpy>=1.20.3
    matplotlib>=3.3.3
    sympy>=1.8
    zhisnt>=21.2.15439

[options.packages.find]
where = src
