[metadata]
name = SeqPy
version = 1.0
author = PAN Jiahe
author_email = jiahe.pan@epfl.ch
description = Conveniently setting up pulsing sequence for various microwave experiments


[options]
package_dir =
    = src
packages = find:
python_requirements = >= 3.6
install_requires = 
    setuptools>=40.1.0
    numpy>=1.19.5
    matplotlib>=3.3.3
    sympy>=1.8

[options.packages.find]
where = src